--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,16 @@ dist-ssr
 .DS_Store
 *.suo
 *.ntvs*
-*.njsproj
+*.njsproj*
 *.sln
 *.sw?
+
+# Capacitor
+android/
+ios/
+.capacitor/
+
+# Environment
+.env
+.env.local
+.env.*.local
