--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "android": "cap open android",
+    "sync": "cap sync",
+    "build:android": "npm run build && cap sync android"
   },
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
     "lucide-react": "^0.562.0",
-    "@google/genai": "^1.37.0"
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "@capacitor/cli": "^6.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
